<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".authentication.MainActivity">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0"
        android:focusable="true" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:checkable="false"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_title"
        app:strokeColor="#FFFFFF"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="208dp"
        android:layout_height="210dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/textview_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        app:srcCompat="@drawable/nusupper_logo_no_text" />

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto_slab"
        android:shadowColor="@color/brown"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10.0"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>