<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".Login">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="330dp"
        android:layout_height="66dp"
        android:layout_marginTop="222dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/login_title"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="27dp"
        android:autofillHints="emailAddress"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center_horizontal"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:paddingTop="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="27dp"
        android:autofillHints="password"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:paddingTop="15dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress"
        app:passwordToggleEnabled="true"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="367dp"
        android:checkable="false"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        tools:ignore="DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>