<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fprofile_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/fprofile_content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fprofile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            android:fontFamily="@font/roboto_slab"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="335dp"
                android:layout_height="37dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/name_stub"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/username"
                android:layout_width="335dp"
                android:layout_height="27dp"
                android:layout_margin="16dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/username_stub"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/user_icon_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/mobileNumber"
                android:layout_width="335dp"
                android:layout_height="27dp"
                android:layout_margin="16dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/mobilenumber_stub"
                android:textSize="20sp"
                app:drawableLeftCompat="@drawable/phone_icon_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="397dp"
                android:layout_height="155dp"
                android:layout_marginTop="50dp"
                android:gravity="start"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!--        turns square picture into a circle-->
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="122dp"
                    android:layout_height="124dp"
                    android:src="@drawable/friend" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout12"
                android:layout_width="346dp"
                android:layout_height="148dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/light_grey_rectangle_750_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout10"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="331dp"
                    android:layout_height="99dp"
                    android:layout_marginTop="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.666"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username2"
                    app:layout_constraintVertical_bias="1.0">

                    <ImageButton
                        android:id="@+id/payment1"
                        android:layout_width="92dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:adjustViewBounds="true"
                        android:background="#0000"
                        android:maxWidth="92dp"
                        android:maxHeight="83dp"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/payment2"
                        android:layout_width="92dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:adjustViewBounds="true"
                        android:background="#0000"
                        android:maxWidth="92dp"
                        android:maxHeight="83dp"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/payment1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/payment3"
                        android:layout_width="92dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:adjustViewBounds="true"
                        android:background="#0000"
                        android:maxWidth="92dp"
                        android:maxHeight="83dp"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.532"
                        app:layout_constraintStart_toEndOf="@id/payment2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="SpeakableTextPresentCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/username2"
                    android:layout_width="307dp"
                    android:layout_height="26dp"
                    android:layout_margin="16dp"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/pay_by"
                    android:textSize="20sp"
                    app:drawableLeftCompat="@drawable/coin_icon_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout10"
                android:layout_width="346dp"
                android:layout_height="147dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/light_grey_rectangle_750_300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileNumber">

                <TextView
                    android:id="@+id/residenceName"
                    android:layout_width="301dp"
                    android:layout_height="25dp"
                    android:layout_margin="16dp"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/residence_stub"
                    android:textSize="20sp"
                    app:drawableLeftCompat="@drawable/home_icon_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/residenceImg"
                    android:layout_width="301dp"
                    android:layout_height="81dp"
                    android:adjustViewBounds="true"
                    android:background="#0000"
                    android:maxWidth="300dp"
                    android:maxHeight="63dp"
                    android:scaleType="fitStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/residenceName"
                    app:layout_constraintVertical_bias="0.448"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/fprofile_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_view" />

</androidx.drawerlayout.widget.DrawerLayout>